# ggcode

./: .gitignore  .golangci.yml  .goreleaser.yaml  .teamclaw-notes.md  ARCHITECTURE_DIAGRAM.md  BUG-tui-input-missing.md  CODE-REVIEW.md  FINAL_SUMMARY.txt  GGCODE.md  MOBILE_MESSAGE_LOSS_ROOT_CAUSE_ANALYSIS.md  Makefile  QUICK_FIX_REFERENCE.md  README.md  README_INVESTIGATION.md  README_zh-CN.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW_FULL.md  a2a-optimization-plan.md  copilot-session-1a013d5c-7e89-43a4-a3ce-b5801e23fa04.md  desktop.pen  ggcode.example.yaml  ggcode.yaml  go.mod  go.sum  index.html  locks.md  lost-changes-inventory.md  mermaid-test.md  precompact-retrospective.md  prompt-latency.md  railway.json  railway.toml  script.js  styles.css
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
acp-registry/: agent.json
config/: mcporter.json
docs/: ARCHITECTURE.md  PHASE_PLAN.md  a2a-auth.md  acp-go-integration.md  acp.md  fluui-migration-assessment.md  release-process.md  security-review.md  subagent-test.txt  tool-comparison-cc.md
ggcode-relay/: .gitignore  Dockerfile  deploy.sh  go.mod  go.sum  main.go  main_test.go  model_catalog.go  model_catalog_test.go  railway.json  railway.toml  relay.go  relay_test.go  run-local.sh  security.go  security_test.go  share_auth.go  share_auth_test.go  stats.go  store.go  store_test.go  trace.go  trace_test.go
memory/: api-audit-report.md  arch-audit-report.md  arch-review-report.md  architecture-review.md  code-quality-review-report.md  code-quality-review.md  comprehensive-review-2026-06.md  comprehensive-review-summary.md  core-review-report.md  full-review-2025-07.md  infra-layer-review.md  quality-review-report.md  review-report-im-chat-webui.md  security-review-report-final.md  security-review-report.md  security-review.md  test-ci-review.md  test-coverage-review.md  test-quality-audit.md  test-review-report.md  tool-layer-review-report.md  tui-broken-state-investigation.md  tui-chat-interaction-review.md  (+2 more)
npm/: README.md  (+1 more)
python/: README.md  pyproject.toml
python/ggcode_release_installer/: __init__.py  cli.py
python/tests/: test_cli.py
(+1994 files in other folders)
