[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ggcode"
version = "0.0.0.dev0"
description = "Thin Python wrapper that installs the ggcode GitHub Release binary"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "topcheer" }]

[project.scripts]
ggcode = "ggcode_release_installer.cli:main"

[tool.setuptools]
packages = ["ggcode_release_installer"]
