[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ggcode"
version = "1.3.78"
description = "Thin PyPI wrapper that installs the ggcode GitHub Release binary"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.scripts]
ggcode = "ggcode:main"

[tool.setuptools]
packages = ["ggcode"]

[tool.setuptools.package-data]
ggcode = ["*.py"]
